<resources>
    <string name="app_name">Inventory</string>
    <string name="sample_text">test</string>
    <string name="editor_activity_title_new_inventory">Add Inventory</string>
    <string name="category_supplier">Supplier</string>
    <string name="supplier_number">Enter Supplier Number</string>
    <string name="supplier_one">Supplier 1</string>
    <string name="supplier_two">Supplier 2</string>
    <string name="supplier_three">Supplier 3</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Enter Product Name</string>
    <string name="hint_product_price">Enter Product Price</string>
    <string name="delete">DELETE</string>
    <string name="add_a_product">Add a Product</string>
    <string name="edit_a_product">Edit Product</string>
    <string name="error_updating_product">Error with updating product</string>
    <string name="product_is_updated">Product is updated</string>
    <string name="unsaved_changes_dialog_msg">Are you sure to discard your changes and quit editing?</string>
    <string name="discard_button_message">Discard</string>
    <string name="keep_editing_button_message">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="error_delete_product">Error with deleting product</string>
    <string name="product_deleted">Product deleted</string>
    <string name="hint_product_quantity">Quantity</string>

</resources>
